Part 1 of ETHREEOH-581 "Visual improvements: Invite view" - 2. Centre-align arrow betweeen "Search for People" and "Invite Users". - 4. Change menu bar stroke weight to 1px and apply correct colour value (See invite visual spec) - 5. Remove white stripe - 7. Increase left-margin by 11px (20px total). Reduce component width ("Search for People" and "Add external users") by the same amount if necessary. - 8. Change background colour of "Add external users" component to #fbfbfb. - 9. Change stroke style of "Add external users" component from solid to dashed (1px). - 10. Increase right-margin by 11px (20px total). Reduce component width ("Invite Users") by same amount if necessary.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@17012 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 6e820a2ef6d06a79a415ee8d41d2388fa307a3d0

--- a/root/projects/slingshot/source/web/components/invite/addemail.css
+++ b/root/projects/slingshot/source/web/components/invite/addemail.css
@@ -1,6 +1,6 @@
 .inviteusersbyemail
 {
-   margin: 15px 10px 0;
+   margin: 1em 0 0;
 }
 
 .inviteusersbyemail .title
@@ -12,7 +12,7 @@
 
 .inviteusersbyemail .byemailbody
 {
-   border: 1px solid #c0c0c0;
+   border: 1px dashed #c0c0c0;
    padding: 0.5em 0.5em 1em;
 }
 
